# ibus-xkb-layouts

./: configure.ac
src/: Makefile.am  engine.c  main.c  xkbutil.c  xkbutil.h
